NetBSD Problem Report #43695

From www@NetBSD.org  Mon Aug  2 10:31:33 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 4530263BB94
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  2 Aug 2010 10:31:33 +0000 (UTC)
Message-Id: <20100802103129.E06D063BB83@www.NetBSD.org>
Date: Mon,  2 Aug 2010 10:31:29 +0000 (UTC)
From: kosaki_kt@ybb.ne.jp
Reply-To: kosaki_kt@ybb.ne.jp
To: gnats-bugs@NetBSD.org
Subject: acroread7 does not work properly with current-kernel newer than 5.99.35
X-Send-Pr-Version: www-1.0

>Number:         43695
>Category:       kern
>Synopsis:       acroread7 does not work properly with current-kernel newer than 5.99.35
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    chs
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Aug 02 10:35:00 +0000 2010
>Closed-Date:    Sat Sep 25 10:07:30 +0000 2010
>Last-Modified:  Sat Sep 25 10:07:30 +0000 2010
>Originator:     kotaro kosaki
>Release:        NetBSD-current 5.99.38
>Organization:
>Environment:
NetBSD phnm1 5.99.38 NetBSD 5.99.38 (GENERIC) #0: Sat Jul 31 13:18:31 JST 2010  kosaki@phnm1:/udd2/amd64/obj/sys/arch/amd64/compile/GENERIC amd64
>Description:
under  current kernels   5.99.38 -5.99.35
with acroread7

1. can't open pdf file with unembedded fonts

2. can't view documents properties of  pdf file 
  ( immediately exit ) 

3. no problem with kernel 5.99.34 or older
>How-To-Repeat:
1. Open GIGABYTE motherboard manual ( with unembedded fonts)
2. Open SuperMicro motherboard manual ( with   embedded fonts )
>Fix:
related to recent compat_linux changes ?

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->chs
Responsible-Changed-By: chs@NetBSD.org
Responsible-Changed-When: Tue, 03 Aug 2010 01:15:30 +0000
Responsible-Changed-Why:
I'm handling linux stuff these days.


From: Chuck Silvers <chs@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43695 CVS commit: src/sys/compat
Date: Sat, 11 Sep 2010 20:53:05 +0000

 Module Name:	src
 Committed By:	chs
 Date:		Sat Sep 11 20:53:04 UTC 2010

 Modified Files:
 	src/sys/compat/linux/common: linux_dirent.h linux_misc.c
 	src/sys/compat/linux32/common: linux32_dirent.c linux32_types.h

 Log Message:
 recent versions of linux (which we now claim to be) supply a BSD-style
 d_type value in getdents() results, after the d_name field.
 make our emulation do the same.  fixes part of PR 43695.


 To generate a diff of this commit:
 cvs rdiff -u -r1.11 -r1.12 src/sys/compat/linux/common/linux_dirent.h
 cvs rdiff -u -r1.216 -r1.217 src/sys/compat/linux/common/linux_misc.c
 cvs rdiff -u -r1.11 -r1.12 src/sys/compat/linux32/common/linux32_dirent.c
 cvs rdiff -u -r1.12 -r1.13 src/sys/compat/linux32/common/linux32_types.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Chuck Silvers <chs@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43695 CVS commit: src
Date: Tue, 21 Sep 2010 19:26:20 +0000

 Module Name:	src
 Committed By:	chs
 Date:		Tue Sep 21 19:26:20 UTC 2010

 Modified Files:
 	src/lib/libc/sys: open.2
 	src/sys/compat/linux/arch/alpha: linux_fcntl.h
 	src/sys/compat/linux/arch/amd64: linux_fcntl.h
 	src/sys/compat/linux/arch/arm: linux_fcntl.h
 	src/sys/compat/linux/arch/i386: linux_fcntl.h
 	src/sys/compat/linux/arch/mips: linux_fcntl.h
 	src/sys/compat/linux/arch/powerpc: linux_fcntl.h
 	src/sys/compat/linux/common: linux_file.c
 	src/sys/kern: vfs_vnops.c
 	src/sys/sys: fcntl.h

 Log Message:
 implement O_DIRECTORY as standardized in POSIX-2008,
 for both native and linux emulations.
 this fixes the rest of PR 43695.


 To generate a diff of this commit:
 cvs rdiff -u -r1.45 -r1.46 src/lib/libc/sys/open.2
 cvs rdiff -u -r1.2 -r1.3 src/sys/compat/linux/arch/alpha/linux_fcntl.h
 cvs rdiff -u -r1.2 -r1.3 src/sys/compat/linux/arch/amd64/linux_fcntl.h
 cvs rdiff -u -r1.2 -r1.3 src/sys/compat/linux/arch/arm/linux_fcntl.h
 cvs rdiff -u -r1.5 -r1.6 src/sys/compat/linux/arch/i386/linux_fcntl.h
 cvs rdiff -u -r1.5 -r1.6 src/sys/compat/linux/arch/mips/linux_fcntl.h
 cvs rdiff -u -r1.7 -r1.8 src/sys/compat/linux/arch/powerpc/linux_fcntl.h
 cvs rdiff -u -r1.99 -r1.100 src/sys/compat/linux/common/linux_file.c
 cvs rdiff -u -r1.177 -r1.178 src/sys/kern/vfs_vnops.c
 cvs rdiff -u -r1.35 -r1.36 src/sys/sys/fcntl.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: chs@NetBSD.org
State-Changed-When: Tue, 21 Sep 2010 19:32:29 +0000
State-Changed-Why:
I've fixed all the problems with acroread that I've found,
do you still see any problems?


From: <kosaki_kt@ybb.ne.jp>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/43695 (acroread7 does not work properly with current-kernel newer than 5.99.35)
Date: Sat, 25 Sep 2010 12:33:08 +0900 (JST)

 problems solved ( amd64 /i386 )

State-Changed-From-To: feedback->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Sat, 25 Sep 2010 10:07:30 +0000
State-Changed-Why:
Confirmed fixed, thanks for the feedback.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.