recent versions of linux (which we now claim to be) supply a BSD-style d_type value in getdents() results, after the d_name field. make our emulation do the same.  fixes part of PR 43695.